# pandora_stdr

./: CMakeLists.txt  README.md  package.xml
launch/: robot_interface.launch  simulator.launch  spawn_robot.launch
resources/: pandora_new.xml
resources/maps/: robocup1.yaml  robocup2.yaml
scripts/: tf_remmapper.py
