<?xml version="1.0"?>
<package>
 <name>pandora_stdr</name>
  <version>0.0.0</version>
  <description>Intergation between PANDORA and stdr simulator</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>stdr_server</run_depend>
  <run_depend>stdr_robot</run_depend>
  <run_depend>stdr_gui</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>master_discovery_fkie</run_depend>
  <run_depend>master_sync_fkie</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
